# laba

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  THIRD-PARTY-LICENSES.md  TODO.md  deny.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  output.rs
cli/src/commands/: api.rs  attachment.rs  auth.rs  cache.rs  comment.rs  import.rs  mod.rs  notification.rs  relation.rs  server.rs  time.rs  wp.rs
cli/tests/: auth.rs  cache.rs  resources.rs  server.rs
core/: Cargo.toml  build.rs
core/src/: auth.rs  backend.rs  cache.rs  client.rs  config.rs  datetime.rs  duration.rs  entities.rs  error.rs  github.rs  holidays.rs  lib.rs  migrate.rs  normalize.rs  resolve.rs  secrets.rs  settings.rs  state.rs  timelog.rs  update.rs
core/src/resources/: api.rs  attachment.rs  comment.rs  mod.rs  notification.rs  relation.rs  time.rs  work_packages.rs
docs/: RELEASING.md
docs/ADR/: 0001-tauri-rust-workspace.md  0002-multiple-server-profiles.md  0003-token-storage-keyring-file-fallback.md  0004-cli-free-redesign.md  0005-distribution-github-releases.md  0006-error-code-mapping-and-output.md  0007-per-server-stable-entity-cache.md  0008-drop-auth-import.md  0009-token-input-stdin-only.md  0010-webview-content-security-policy.md  0011-reqwest-ring-crypto-provider.md  0012-signed-self-update.md  0013-backend-trait-capabilities-typed-entities.md  0014-config-forward-only-compatibility.md  README.md
gui/: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  wdio.conf.js
gui/e2e/: README.md  i18n.test.js  smoke.test.js
gui/scripts/: demo-driver.mjs  record-demo.sh
gui/src/: app.css  app.html
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  lib.rs  linux_tray.rs  main.rs  notify.rs
gui/src/lib/: api.ts  capabilities.test.ts  capabilities.ts  dev-mock.ts  external.ts  format.test.ts  format.ts  friendly-error.test.ts  friendly-error.ts  i18n.test.ts  i18n.ts  invoke.ts  keys.test.ts  keys.ts  markdown.test.ts  markdown.ts  poller.test.ts  poller.ts  scale.ts  scroll.ts  settings-search.test.ts  settings-search.ts  settings.test.ts  store.test.ts  store.ts  test-fixtures.ts  theme.ts  types.ts  update-check.test.ts  update-check.ts  updater.test.ts  updater.ts
gui/src/lib/components/: BackendsBanner.svelte  FilterRow.svelte  GhDependencyBanner.svelte  NotificationColumn.svelte  ServerSwitcher.svelte  ServerSwitcher.test.ts  SetupWizard.svelte  SetupWizard.test.ts  StatusBanner.svelte  SyncBar.svelte  TaskColumn.svelte  TaskColumn.test.ts  TimelogCandidates.svelte  TimelogIndicator.svelte  TimelogPanel.svelte  UpdateBanner.svelte  UpdateIndicator.svelte  UpdateIndicator.test.ts
gui/src/lib/locales/: en.ts  ru.ts
gui/src/routes/: +layout.svelte  +page.svelte
gui/src/routes/settings/: +page.svelte
gui/src/routes/task/: +page.svelte
gui/src/test-stubs/: app-navigation.ts  app-state.ts
scripts/: build-linux.sh  build-updater-json.sh  changelog-section.sh  check-changelog.sh  fix-appimage.sh  gen-third-party-licenses.sh  gui-build-debug.sh  gui-dev.sh  gui-relaunch.sh  release-validate-tag.sh  tauri-container.sh
scripts/tests/: build-updater-json.test.sh  changelog-section.test.sh
site/: index.html  robots.txt  sitemap.xml
