[workspace]
members = ["core", "cli", "gui/src-tauri"]
# `gui` needs webkit2gtk and is built/tested only in the Tauri container
# (scripts/tauri-container.sh). Keep host-side `cargo build`/`test`/`nextest`
# (without `--workspace`) scoped to the pure-Rust crates.
default-members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/VitalyOstanin/laba"
authors = ["Vitaly Ostanin <vitaly.ostanin@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
# `multipart` adds multipart upload of attachment files.
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "stream", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
# preserve object key order for stable --human column output.
serde_json = { version = "1", features = ["preserve_order"] }
keyring = { version = "3", features = ["async-secret-service", "async-io", "crypto-rust", "apple-native", "windows-native"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
