[package]
name = "taskstream-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for OpenProject."

[[bin]]
name = "taskstream"
path = "src/main.rs"

[dependencies]
taskstream-core = { path = "../core" }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
