[package]
name = "laba-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line interface for GitHub and OpenProject (part of laba)."
keywords = ["github", "cli", "openproject", "issues", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "laba"
path = "src/main.rs"

[dependencies]
laba-core = { path = "../core" }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"

# Signal handling cleans up in-flight download temp files on interruption. On
# Unix, signal-hook exposes the delivered signal number so the process can exit
# with the conventional 128+signum code (130/143/129 for INT/TERM/HUP). On other
# platforms (Windows), ctrlc covers Ctrl-C / Ctrl-Break with a single handler.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(unix))'.dependencies]
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
