[package]
name = "laba-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenProject API v3 client library (config, auth, transport)."

[dependencies]
# Async HTTP transport with SOCKS5 + streaming; rustls to avoid a system OpenSSL build dep.
reqwest = { workspace = true }
tokio = { workspace = true }
# Config and API payload (de)serialization.
serde = { workspace = true }
serde_json = { workspace = true }
# System keyring for token storage (Secret Service / macOS Keychain / Windows Credential Manager).
keyring = { workspace = true }
# Typed error variants with Display.
thiserror = { workspace = true }
# SHA-256 checksum of downloaded attachment content.
sha2 = "0.10"
# Compare release tags to the running version for the update changelog.
semver = "1"
# Stream the response body in chunks.
futures-util = "0.3"
# Local date for the default spentOn on time-entry create.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Diagnostic logging facade; the CLI installs env_logger and the GUI routes it
# through tauri-plugin-log. Request method/URL/status/timing at debug, bodies at
# trace (the auth token lives in the Authorization header and is never logged).
log = "0.4"
# IANA timezone database for the configurable day-boundary/display zone.
chrono-tz = { version = "0.10", default-features = false }

[build-dependencies]
# Compile holidays_ru.json into static arrays (build.rs).
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
# In-process HTTP mock server for client tests without a live OpenProject.
wiremock = "0.6"
# Temp dirs for config/secrets file tests.
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "test-util"] }
