[package]
name = "laba-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Backend clients for GitHub and OpenProject with config, auth and caching (laba core)."
keywords = ["github", "openproject", "issues", "notifications", "task-management"]
categories = [
    "api-bindings",
    "web-programming::http-client",
    "authentication",
]

[dependencies]
# Async HTTP transport with SOCKS5 + streaming; rustls to avoid a system OpenSSL build dep.
reqwest = { workspace = true }
# Installs the ring crypto provider for reqwest's rustls backend (see client.rs).
rustls = { workspace = true }
tokio = { workspace = true }
# Config and API payload (de)serialization.
serde = { workspace = true }
serde_json = { workspace = true }
# Token storage via keyring-core with an OS-native credential store (see the
# per-target deps below). The legacy `keyring` 3 crate is kept only as a reader
# for one-shot lazy migration (core/src/secrets.rs).
keyring-core = { workspace = true }
# Typed error variants with Display.
thiserror = { workspace = true }
# SHA-256 checksum of downloaded attachment content.
sha2 = "0.10"
# Compare release tags to the running version for the update changelog.
semver = "1"
# Stream the response body in chunks.
futures-util = "0.3"
# Local date for the default spentOn on time-entry create.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Diagnostic logging facade; the CLI installs env_logger and the GUI routes it
# through tauri-plugin-log. Request method/URL/status/timing at debug, bodies at
# trace (the auth token lives in the Authorization header and is never logged).
log = "0.4"
# NFC-normalize names before matching so composed/decomposed spellings of the
# same name (e.g. Cyrillic "й" NFC vs NFD) compare equal. Pure Rust, no C deps.
unicode-normalization = "0.1"
# IANA timezone database for the configurable day-boundary/display zone.
chrono-tz = { version = "0.10", default-features = false }
# Object-safe async methods for the Backend trait (dyn dispatch per server).
async-trait = "0.1"

# OS-native keyring-core credential store + legacy keyring 3 reader (migration).
[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { workspace = true }
keyring = { workspace = true, features = ["async-secret-service", "async-io", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }
keyring = { workspace = true, features = ["windows-native"] }

[build-dependencies]
# Compile holidays_ru.json into static arrays (build.rs).
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
# In-process HTTP mock server for client tests without a live OpenProject.
wiremock = "0.6"
# Temp dirs for config/secrets file tests.
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "test-util"] }
