[package]
name = "taskstream-gui"
description = "taskstream desktop dashboard (Tauri)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taskstream_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Bridge Rust `log` records to stdout and the webview console (debugging).
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taskstream-core = { path = "../../core" }

# Linux tray via the native StatusNotifierItem protocol. Tauri's built-in tray
# (libayatana-appindicator) does not deliver click events on Linux, so the
# GNOME "double-click to activate" cannot reach the app. ksni exposes the SNI
# `Activate` method that GNOME maps to a double-click, letting the tray reveal
# the window. On Windows/macOS the Tauri tray is used instead.
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"

